# goit_homework_M2T9

./: LICENSE  README.md  katsapy.json  main.py  pyproject.toml
home_work/: authors.json  main.py  models.py
infowar/: links.json  losses.json
infowar/infowar/: settings.py
infowar/infowar/spiders/: get_losses.py  get_urls.py
